# code-events-api

./: .env.example  .pre-commit-config.yaml  DEVELOPMENT_GUIDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  database.py  main.py  models.py
app/routes/: calendar.py  events.py  jira.py
app/services/: event_service.py  jira_service.py
app/utils/: helpers.py  logging.py
scripts/: generate_requirements.py  insertSampleData.py  setup_db.py  setup_dev.py
tests/: test_events.py
