[project]
name = "code-events-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "google-api-python-client>=2.166.0",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.28.1",
    "motor>=3.7.0",
    "openai>=1.70.0",
    "pydantic>=2.11.1",
    "pymongo>=4.11.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "slack-sdk>=3.35.0",
    "uvicorn>=0.34.0",
]
